@@ -44,6 +44,7 @@ Bug fixes
  * Null characters in URLs no longer crash the redirect middleware on PostgreSQL (Andrew Crewdson, Matt Westcott)
  * Permission checks no longer prevent a non-live page from being unscheduled (Abdulmalik Abdulwahab)
  * Copy-paste between Draftail editors now preserves all formatting/content (Thibaud Colas)
+ * Fix alignment of checkboxes and radio buttons on Firefox (Matt Westcott)
 
 Upgrade considerations
 ======================
